--- a/project3/Interactive-BO.ipynb
+++ b/project3/Interactive-BO.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from solution import BO_algo, train_agent, f, plot_agent\n",
+    "from solution import BO_algo, train_agent, f, v, plot_agent\n",
     "import ipywidgets\n",
     "from ipywidgets import interact\n",
     "import IPython\n",
@@ -35,22 +35,25 @@
    "outputs": [],
    "source": [
     "agent = BO_algo()\n",
-    "train_agent(agent)\n",
+    "train_agent(agent, debug=True)\n",
     "IPython.display.clear_output(wait=True)\n",
     "plt.close()\n",
-    "plot_agent(agent)"
+    "#plot_agent(agent)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "def run_interact(lengthscale, nu, variance, prior_mu, sigma_f, n_iters):\n",
+    "def run_interact(lengthscale, nu, variance, prior_mu, sigma_f, beta, n_iters):\n",
     "    agent = BO_algo()\n",
     "    agent.μf_prior = prior_mu\n",
     "    agent.σ_f = sigma_f\n",
+    "    agent.β = beta\n",
     "    agent.var_f = variance\n",
     "    agent.Matern_f_np = Matern(length_scale=lengthscale, nu=nu)\n",
     "    agent.Matern_f = lambda x, y: agent.var_f * torch.from_numpy(agent.Matern_f_np(x, y))\n",
@@ -67,8 +70,29 @@
     "        variance=ipywidgets.FloatSlider(value=0.5, min=0.1, max=1, step=0.01, continuous_update=False),\n",
     "        prior_mu=ipywidgets.FloatSlider(value=0., min=-1., max=1., step=0.01, continuous_update=False),\n",
     "        sigma_f=ipywidgets.FloatSlider(value=0.15, min=0.01, max=0.3, step=0.01, continuous_update=False),\n",
+    "        beta=ipywidgets.FloatSlider(value=1., min=0.01, max=3, step=0.01, continuous_update=False),\n",
     "        n_iters=ipywidgets.IntSlider(value=20, min=1, max=40, continuous_update=False),\n",
     "        );"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "agent = BO_algo()\n",
+    "train_agent(agent, n_iters=10)\n",
+    "plot_agent(agent)\n",
+    "xs = torch.linspace(0,5).unsqueeze(1)\n",
+    "mus, var = agent.get_mu_sigma_f(xs, full_cov=True)\n",
+    "torch.manual_seed(1)\n",
+    "ys = torch.distributions.MultivariateNormal(mus, var).sample()\n",
+    "fig = plt.gcf()\n",
+    "(ax1, ax2) = fig.get_axes()\n",
+    "ax1.plot(xs, ys, 'r', label='Thompson');"
    ]
   },
   {
@@ -77,11 +101,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is necessary \"screen whitespace\" so the screen doesn't jump around\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "\n",
