Went back to sligthly larger prior, updates ipython script

--- a/project3/Interactive-BO.ipynb
+++ b/project3/Interactive-BO.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = BO_algo()\n",
+    "agent = BO_algo(on_docker=False)\n",
     "train_agent(agent, debug=True)\n",
     "IPython.display.clear_output(wait=True)\n",
     "plt.close()\n",
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "def run_interact(lengthscale, nu, variance, prior_mu, sigma_f, beta, kappa, n_iters):\n",
-    "    agent = BO_algo()\n",
+    "    agent = BO_algo(on_docker=False)\n",
     "    agent.μf_prior = prior_mu\n",
     "    agent.σ_f = sigma_f\n",
     "    agent.β = beta\n",
@@ -63,6 +63,8 @@
     "    IPython.display.clear_output(wait=True)\n",
     "    plt.close()\n",
     "    plot_agent(agent)\n",
+    "    best_x = agent.get_solution()\n",
+    "    plt.vlines(best_x, ymin=kappa-0.3, ymax=kappa+0.3, colors='r')\n",
     "    plt.show()\n",
     "\n",
     "interact(run_interact,\n",
@@ -72,23 +74,9 @@
     "        prior_mu=ipywidgets.FloatSlider(value=0., min=-1., max=1., step=0.01, continuous_update=False),\n",
     "        sigma_f=ipywidgets.FloatSlider(value=0.15, min=0.01, max=0.3, step=0.01, continuous_update=False),\n",
     "        beta=ipywidgets.FloatSlider(value=1., min=0.01, max=3, step=0.01, continuous_update=False),\n",
-    "        kappa=ipywidgets.FloatSlider(value=1., min=-2., max=2., step=0.01, continuous_update=False),\n",
+    "        kappa=ipywidgets.FloatSlider(value=-0.5, min=-2., max=2., step=0.01, continuous_update=False),\n",
     "        n_iters=ipywidgets.IntSlider(value=20, min=1, max=40, continuous_update=False),\n",
     "        );"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "agent = BO_algo()\n",
-    "train_agent(agent, n_iters=10)\n",
-    "plot_agent(agent)\n",
-    "xs = torch.linspace(0,5).unsqueeze(1)"
    ]
   },
   {
